modernize java